--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
   "name": "mpr",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint",
-    "code:fix": "ng lint --fix && npx prettier --write src/*"
-  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.1.1",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -49,5 +41,13 @@
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "typescript": "~5.1.3"
+  },
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "code:fix": "ng lint --fix && npx prettier --write src/*"
   }
 }
